--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <slf4j.version>1.6.4</slf4j.version>
         <project.basedir>.</project.basedir>
-
+        <spring.data.mongo.version>1.0.0.M4</spring.data.mongo.version>
         <springframework.version>3.1.2.RELEASE</springframework.version>
         <springframework.security.version>3.1.2.RELEASE</springframework.security.version>
         <!--springframework.social-facebook-version>1.0.1.RELEASE</springframework.social-facebook-version>
@@ -52,6 +52,16 @@
             <name>AOL yoava</name>
             <url>http://yoava.artifactoryonline.com/yoava/repo</url>
         </repository-->
+        <repository>
+            <id>spring-maven-release</id>
+            <name>Spring Maven Release Repository</name>
+            <url>http://maven.springframework.org/release</url>
+        </repository>
+        <repository>
+            <id>spring-maven-milestone</id>
+            <name>Spring Maven Milestone Repository</name>
+            <url>http://maven.springframework.org/milestone</url>
+        </repository>
 
     </repositories>
 
@@ -161,16 +171,11 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>${springframework.security.version}</version>
         </dependency>
-        <!--dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-facebook</artifactId>
-            <version>${springframework.social-facebook-version}</version>
-        </dependency>
         <dependency>
-            <groupId>org.springframework.social</groupId>
-            <artifactId>spring-social-web</artifactId>
-            <version>${springframework.social-version}</version>
-        </dependency-->
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>${spring.data.mongo.version}</version>
+        </dependency>
 
 
         <dependency>
@@ -235,16 +240,6 @@
         </dependency>
 
 
-        <!--
-           mvn install:install-file -Dfile=./lib/simplejpa-1.6.jar -DgroupId=com.spaceprogram -DartifactId=simplejpa -Dversion=1.6 -Dpackaging=jar -DgeneratePom=true
-            -->
-
-        <!--dependency>
-            <groupId>com.spaceprogram</groupId>
-            <artifactId>simplejpa</artifactId>
-            <version>1.6</version>
-        </dependency-->
-
         <dependency>
             <groupId>simplejpa</groupId>
             <artifactId>simplejpa</artifactId>
@@ -273,16 +268,6 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/qrgen-1.0.jar</systemPath>
         </dependency>
-
-
-        <!--dependency>
-            <groupId>gui.ava</groupId>
-            <artifactId>html2image</artifactId>
-            <version>0.9</version>
-            <systemPath>${project.basedir}/lib/html2image-0.9.jar</systemPath>
-        </dependency-->
-
-
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
